--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Séries e Filmes Online</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
+
+        :root{
+            --bg-color: grey;
+            --red:#ad1919;
+        }
+    *{
+        margin: 0;
+        padding: 0;
+    }
+
+    body{
+        font-family: 'Poppins', Arial;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background: #4B3C4D;
+    }
+
+    .container{
+        height: 100%;
+        width: 1668px;
+        color: white;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: column;
+    }
+    header{
+        top: 0;
+        background: var(--red);
+        height: 140px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .links-header{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background: green;
+        width: 650px;
+        height: 50px;
+    }
+    a{
+        text-decoration: none;
+        color: inherit;
+    }
+    .input-pesquisa{
+        width: 450px;
+        height: 40px;
+        border-radius: 20px;
+        text-align: center;
+    }
+    .series{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        background: rgba(21, 255, 0, 0.171);
+        width: 100%;
+        padding: 0px 0px 50px;
+    }
+    .sub-div{
+        margin: 40px 10px;
+        height: 320px;
+        width: 220px;
+    }
+    .sub-div img{
+        border-radius: 5px;
+        height: 320px;
+        width: 220px;
+        transition: 0.2s ease-in-out;
+
+    }
+    .sub-div img:hover{
+        cursor: pointer;
+        transform: scale(1.05);
+        box-shadow: 0px 0px 20px black;
+    }
+    .sub-div .genero{
+        color: var(--red);
+        font-size: small;
+    }
+    </style>
 </head>
 <body>
+    <header>
+        <div class="links-header">
+            <a href="http://">Home</a>
+            <a href="http://">Ação</a>
+            <a href="http://">Comédia</a>
+            <a href="http://">Drama</a>
+        </div>
+    </header>
+    <div class="container">
     {{{body}}}
+    <footer>
+        Trabalho IFPB - Alunos César Augusto, João Victor e Lucas Morais.
+    </footer>
+    </div>
 </body>
 </html>
